traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:21: error: not found: value Direction
  if (getDirection()==Direction.est){
                      ^TraversalZigZag:26: error: not found: value Direction
      setDirection(Direction.ouest)
                   ^TraversalZigZag:33: error: not found: value Direction
      setDirection(Direction.est)
                   ^